# policy-verifier

./: .env.example  .gitignore  ARTIFACT_BOUNDARY.md  ARTIFACT_README.md  EVAL_PROTOCOL.md  README.md  artifact_manifest.json  pyproject.toml  release_candidate_checklist.json  requirements-dev.txt  requirements.txt  run.sh
artifact_data/global/: action_catalog.yaml  constraints.yaml
artifact_outputs/: reproduction_report.json  reproduction_report.md
artifact_outputs/analysis/: analysis_bundle.json  corpus_readiness.json  corpus_readiness_recheck.json  data_preflight.json  data_quality_report.json  dataset_audit.json  dataset_audit_recheck.json  global_artifact_assessment.json  global_artifact_assessment.md  global_artifact_assessment_recheck.json  global_artifact_assessment_recheck.md  global_artifact_provenance.json  mini_batch_selection.json  official_evaluation_summary.json  official_evaluation_summary_recheck.json  official_pairwise_tests.json  (+7 more)
config/: anonymization_policy.yaml  attack_mapping.yaml  models.example.yaml  models.freeze.yaml
local_redaction/: README.md  action_mapping_bank.yaml  anonymize_export.py  process_incoming.sh
scripts/: analyze_approval_mode_sensitivity.py  analyze_protocol_extension_candidates.py  build_paper_workspace.sh  check_acm_template.sh  check_template_lock.sh  check_verifier_idempotence.py  export_blind_artifact.sh  render_audit_dashboard.py  render_corpus_readiness_tex.py  render_evaluation_assets.py  render_execution_dashboard.py  render_values_tex.py  suggest_global_policy_updates.py  validate_fresh_clone_reproduction.py
(+1082 files in other folders)
